--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@solana/web3.js": "^1.95.3",
     "next": "14.2.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
